Correct vertical alignment of inline selectmenu

--- a/src/assets/sass/modules/jquery-ui/_selectmenu.scss
+++ b/src/assets/sass/modules/jquery-ui/_selectmenu.scss
@@ -45,6 +45,7 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
+    vertical-align: top;
     font-family: $font-sans-serif;
     text-decoration: none;
     background-color: $color-background;
